Practice what i learned

--- a/Introduction to HTML and CSS/practice/index.html
+++ b/Introduction to HTML and CSS/practice/index.html
@@ -7,8 +7,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my demo project</title>
-    <h1>My demo project</h1>
+    <title>practicing HTML & CSS</title>
+    <h1>Practicing what i learned</h1>
 
 </head>
 <body>
