Tried to make CV

--- a/Introduction to HTML and CSS/practice/index.html
+++ b/Introduction to HTML and CSS/practice/index.html
@@ -38,7 +38,7 @@
     &nbsp;
 
 
-    <p>You can chech my github <a href="https://github.com/davidchrastev"><mark>Here</mark></a></p>
+    <p>You can chech my github <a href="https://github.com/davidchrastev"><button>here</button></a></p>
 
 
 </body>
