--- a/HTML-Structure/instagram/instagram.html
+++ b/HTML-Structure/instagram/instagram.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <div class="page">
-            <div class="tittle">Instagram</div>
+            <div class="tittle">Instagram <img src="instagram.png" alt=""></div>
             <form>
                 <input type="text" placeholder="Phone, number, or username">
                 
