--- a/Flex/website-design/index.html
+++ b/Flex/website-design/index.html
@@ -15,7 +15,7 @@
 
     <header class="header">
         <img src="https://upload.wikimedia.org/wikipedia/commons/2/24/LEGO_logo.svg" alt="Logo" class="logo" />
-        <h2 class="logo-text">Kids Store</h2>
+        <h2 class="logo-text">David Toy Store</h2>
   
         <nav class="navigation">
           <ul class="nav-list" role="list">
@@ -24,6 +24,12 @@
             </li>
             <li class="nav-item">
               <a href="#how">About us</a>
+            </li>
+            <li class="nav-item">
+              <a href="#how">Contacts</a>
+            </li>
+            <li class="nav-item">
+              <a href="#how"></a>
             </li>
           </ul>
         </nav>
